🔥 added blockquote margin to overrides.css to fix alignment (purgecss) 🔥

--- a/src/assets/scss/themes/overrides.css
+++ b/src/assets/scss/themes/overrides.css
@@ -18,3 +18,7 @@
 .dark-mode .content blockquote {
     background-color: #334;
 }
+
+.content blockquote {
+    margin: 0.5em 0;
+}
